почти закончил исправлять